# Builder-Connect

./: README.md  dump.rdb  test.py
.github/: rust.yaml  workflow.yaml
.github/workflows/: main.yml
builder-connect/: .env  Cargo.toml
builder-connect/migrations/00000000000000_diesel_initial_setup/: up.sql
builder-connect/src/: actions.rs  auth.rs  handlers.rs  main.rs  models.rs  schema.rs
builder_connect/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  init-letsencrypt.sh
builder_connect/data/certbot/conf/accounts/acme-staging-v02.api.letsencrypt.org/: meta.json  private_key.json  regr.json
builder_connect/data/certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/: meta.json  private_key.json  regr.json
builder_connect/data/certbot/conf/live/api.thebuildwork.com/: cert.pem  fullchain.pem  privkey.pem
builder_connect/data/certbot/conf/renewal/: api.thebuildwork.com-0001.conf  api.thebuildwork.com.conf
builder_connect/data/nginx/: nginx.conf
builder_connect/src/: actions.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
builder_connect/src/api/: auth.rs  chat_api.rs  email_api.rs  mod.rs  user_actions.rs  user_api.rs
builder_connect/src/chat/: mod.rs  session.rs  socket.rs
builder_connect/src/models/: message_model.rs  mod.rs  user_model.rs
builder_connect/src/repository/: mongodb_repo.rs
builder_connect/src/socket/: lobby.rs  mod.rs  start_connection.rs  ws.rs
builder_connect/tests/: unit_tests.rs
builder_connect_ui/: .env  .gitignore  package-lock.json  package.json
builder_connect_ui/src/calls/: functions.ts
builder_connect_ui/src/components/: Authenticate.tsx  Conversation.tsx  Email.tsx  Footer.tsx  GoogleSignIn.tsx  MessageComponent.tsx  Navbar.tsx  ParticleBackground.tsx  Profile.tsx  ProfileComponent.tsx  Sidebar.tsx  SidebarComponent.tsx
builder_connect_ui/src/components/Faq/: Faq.tsx  FaqSection.tsx
builder_connect_ui/src/config/: particles-config.ts
builder_connect_ui/src/functions/: check_session.ts
builder_connect_ui/src/libs/: functions.ts  useConversation.tsx  useProfile.tsx  useReadProfile.tsx  useReadSession.tsx  useWebsocket.ts
builder_connect_ui/src/pages/: About.tsx  Match.tsx  Profile.tsx  SignIn.tsx  Swipe.tsx  Unsubscribe.tsx  _app.tsx  index.tsx
builder_connect_ui/src/pages/match/: [sub_id].tsx
(+5 files in other folders)
