[package]
name = "builder-connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
futures = "0.3.1"
r2d2 = "0.8.8"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"

# DEPENDENCIES SPECIFIC TO AUTH
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"

