[package]
name = "builder_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
reqwest = {version = "0.11", features = ["json"] }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 

