[package]
name = "builder_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-cors = "0.6.4"
actix-session = {version = "0.8.0", features = ["redis-actor-session"]}
actix-web-actors="4.1"
serde = "1.0.136"
serde_json = "1.0.68"
dotenv = "0.15.0"
futures = "0.3"
reqwest = {version = "0.11", features = ["json"] }
chrono = { version = "0.4.23", features = ["serde"] }
oauth2 = "4.4.2"
uuid = { version = "0.8", features = ["v4", "serde"] }
rand = "0.8.4"
lettre = "0.11"
cargo-chef = "0.1.62"
openssl = { version = "0.10.59", features = ["vendored"] }


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 

